Add ability to upload a file to an ADS
Update BloodHound
Pull out unpatched payloads into file for easy management
Add base64 encoded versions of the shellcode to the payloads directory
Add a configurable jitter to all implants
Update the notifications config if it is changed in the Config.py
Add NotificationsProjectName in Config.py which is displayed in notifications message

4.8 (13/02/19)
==============
Insert tasks when first picked up by the implant with start time
Update task when response returned with output and completed time
Log task ID in task sent/received
Add ability to set username and associate username to tasks issued
Print user in task information when the username is not empty
Improved error handling and logging
Rename CompletedTasks table to Tasks table
Method name refactoring around above changes
Pull out implant cores into Implant-Core.py/.cs/.ps1
Rename 2nd stage cores into Stage2-Core.py/.ps1
Stage2-Core.ps1 (previously Implant-Core.ps1) is no longer flagged by AMSI
Use prepared statements in the DB
Refactoring work to start to break up dependency cycle
Rename DB to Database in Config.py to avoid name clashes
Pull some dependency-less functions into Utils.py to aid dependency management
Fix download-file so that if the same file is downloaded multiple times it gets downloaded to name-1.ext name-2.ext etc
Adjust user/host printing to always be domain\user @ host in implants & logs
Fix CreateRawBase payload creation, used in gzip powershell stager and commands like get-system
Added ImplantID to Tasks table as a foreign key, so it's logged in the Tasks report
Added Testing.md for testing checklist/methodology
Fix Get-ScreenshotAllWindows to return correct file extension
Fix searchhelp for commands with caps
Implant timeout highlighting is now based on beacon time - yellow if it's not checked in for 3x beacon time and red if not checked in for 10x beacon time